--- a/src/styles/boilerplate/reset.scss
+++ b/src/styles/boilerplate/reset.scss
@@ -96,13 +96,10 @@ a:active {
 }
 
 .lv-spacing {
-  @include bp.breakpoint-range(xsmall, small) {
-    margin-top: 100px;
+  @media (max-width: 400px) {
+    margin-top: 100px;  
   }
   
-  @include bp.breakpoint(large){
-    margin-top: 30px;
-  }
 }
 
 // .marquee {
